--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speech2Text</title>
     <link rel="stylesheet" href="../styles/style.css">
+    <script src="../app/index.js"></script>
 </head>
 <body>
+
+  
     
 </body>
 </html>
