--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,21 +9,10 @@
 </head>
 <body>
 
-  <nav>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
-      <label class="logo">DesignX</label>
-      <ul>
-        <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Feedback</a></li>
-      </ul>
-    </nav>
-    <section></section>
+ 
+
+    <div id="transcription">test</div>
+    
     
 </body>
 </html>
