--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speech2Text</title>
-    <link rel="stylesheet" href="../styles/style.css">
-    <script src="../app/index.js"></script>
-</head>
-<body>
-
- 
-
-    <div id="transcription">test</div>
-    
-    
-</body>
+<!-- Created By CodingNepal - www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <!-- <title>Responsive Drop-down Menu Bar</title> -->
+      <link rel="stylesheet" href="../styles/style.css">
+      <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+      <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+   <body>
+      <nav>
+         <div class="logo">
+            CodingNepal
+         </div>
+         <label for="btn" class="icon">
+         <span class="fa fa-bars"></span>
+         </label>
+         <input type="checkbox" id="btn">
+         <ul>
+            <li><a href="#">Home</a></li>
+            <li>
+               <label for="btn-1" class="show">Features +</label>
+               <a href="#">Features</a>
+               <input type="checkbox" id="btn-1">
+               <ul>
+                  <li><a href="#">Pages</a></li>
+                  <li><a href="#">Elements</a></li>
+                  <li><a href="#">Icons</a></li>
+               </ul>
+            </li>
+            <li>
+               <label for="btn-2" class="show">Services +</label>
+               <a href="#">Services</a>
+               <input type="checkbox" id="btn-2">
+               <ul>
+                  <li><a href="#">Web Design</a></li>
+                  <li><a href="#">App Design</a></li>
+                  <li>
+                     <label for="btn-3" class="show">More +</label>
+                     <a href="#">More <span class="fa fa-plus"></span></a>
+                     <input type="checkbox" id="btn-3">
+                     <ul>
+                        <li><a href="#">Submenu-1</a></li>
+                        <li><a href="#">Submenu-2</a></li>
+                        <li><a href="#">Submenu-3</a></li>
+                     </ul>
+                  </li>
+               </ul>
+            </li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+         </ul>
+      </nav>
+      <div class="content">
+         <header>Responsive Drop-down Menu Bar</header>
+         <p>HTML and CSS (Media Query)</p>
+      </div>
+      <script>
+         $('.icon').click(function(){
+           $('span').toggleClass("cancel");
+         });
+      </script>
+   </body>
 </html>
+
