--- a/src/views/index.html
+++ b/src/views/index.html
@@ -53,10 +53,9 @@
             <li><a href="#">Contact</a></li>
          </ul>
       </nav>
-      <div class="content">
-         <header>Responsive Drop-down Menu Bar</header>
-         <p>HTML and CSS (Media Query)</p>
-      </div>
+
+      <div id="transcription">test</div>
+      
       <script>
          $('.icon').click(function(){
            $('span').toggleClass("cancel");
