--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,7 +10,7 @@ body{
   background: #292929;
 }
 nav{
-  background: #1b1b1b;
+  background: #326ff0;
 }
 nav:after{
   content: '';
@@ -34,7 +34,7 @@ nav ul{
 nav ul li{
   float: left;
   display: inline-block;
-  background: #1b1b1b;
+  background: #326ff0;
   margin: 0 5px;
 }
 nav ul li a{
