--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,7 +12,7 @@
    <body>
       <nav>
          <div class="logo">
-            CodingNepal
+            Speechie
          </div>
          <label for="btn" class="icon">
          <span class="fa fa-bars"></span>
