--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,15 +19,18 @@
          </label>
          <input type="checkbox" id="btn">
          <ul>
-            <li><a href="#">Home</a></li>
             <li>
-               <label for="btn-1" class="show">Features +</label>
-               <a href="#">Features</a>
+               <label for="btn-1" class="show">Datei +</label>
+               <a href="#">Datei</a>
                <input type="checkbox" id="btn-1">
                <ul>
-                  <li><a href="#">Pages</a></li>
-                  <li><a href="#">Elements</a></li>
-                  <li><a href="#">Icons</a></li>
+                  <li><a href="#">Öffnen</a></li>
+                  <li><a href="#">Zuletzt verwendete öffnen</a></li>
+                  <li><a href="#">Speichern</a></li>
+                  <li><a href="#">Speichern unter</a></li>
+                  <li><a href="#">Exportieren</a></li>
+                  <li><a href="#">Exportieren als</a></li>
+                  <li><a href="#">Eigenschaften</a></li>
                </ul>
             </li>
             <li>
