--- a/src/views/index.html
+++ b/src/views/index.html
@@ -58,7 +58,8 @@
       </nav>
       
       <div id="transcription">test</div>
-      
+      <img src="../assets/play.svg" alt="play-button" id="play-button">
+      <img src="../assets/pause-1.svg" alt="pause-button" id="pause-button">
       <script>
          $('.icon').click(function(){
            $('span').toggleClass("cancel");
