--- a/src/views/index.html
+++ b/src/views/index.html
@@ -59,7 +59,7 @@
       
       <div id="transcription">test</div>
       <img src="../assets/play.svg" alt="play-button" id="play-button">
-      <img src="../assets/pause-1.svg" alt="pause-button" id="pause-button">
+      <img src="../assets/pause.svg" alt="pause-button" id="pause-button">
       <script>
          $('.icon').click(function(){
            $('span').toggleClass("cancel");
