--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,6 +12,9 @@
    <body>
       <nav>
          <div class="logo">
+            <img src="../img/speechie2.png">
+         </div>
+         <div class="speechie">
             Speechie
          </div>
          <label for="btn" class="icon">
@@ -33,27 +36,8 @@
                   <li><a href="#">Eigenschaften</a></li>
                </ul>
             </li>
-            <li>
-               <label for="btn-2" class="show">Services +</label>
-               <a href="#">Services</a>
-               <input type="checkbox" id="btn-2">
-               <ul>
-                  <li><a href="#">Web Design</a></li>
-                  <li><a href="#">App Design</a></li>
-                  <li>
-                     <label for="btn-3" class="show">More +</label>
-                     <a href="#">More <span class="fa fa-plus"></span></a>
-                     <input type="checkbox" id="btn-3">
-                     <ul>
-                        <li><a href="#">Submenu-1</a></li>
-                        <li><a href="#">Submenu-2</a></li>
-                        <li><a href="#">Submenu-3</a></li>
-                     </ul>
-                  </li>
-               </ul>
-            </li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Anleitung</a></li>
+            <li><a href="#">Kontakt</a></li>
          </ul>
       </nav>
 
