--- a/src/views/index.html
+++ b/src/views/index.html
@@ -12,7 +12,7 @@
    <body>
       <nav>
          <div class="logo">
-            <img src="../img/speechie2.png">
+            <img src="../assets/speechie2.png">
          </div>
          <div class="speechie">
             Speechie
