Wer das liest, ist dumm

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -200,9 +200,9 @@ p{
     
   }
   
-  img .transcription{
-      width: 20%;
-      height: 20%;
+  img{
+      width: 30px;
+      height: 30px;
   }
 
   #pause-button{
