--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,6 +5,9 @@
       <meta charset="utf-8">
       <!-- <title>Responsive Drop-down Menu Bar</title> -->
       <link rel="stylesheet" href="../styles/style.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet">
       <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
       <script src="https://kit.fontawesome.com/a076d05399.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +18,7 @@
             <img src="../assets/speechie2.png">
          </div>
          <div class="speechie">
-            Speechie
+            speechie
          </div>
          <label for="btn" class="icon">
          <span class="fa fa-bars"></span>
