deleted data old html & css 01.04.2021 15:32 - 32s

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="utf-8">
       <!-- <title>Responsive Drop-down Menu Bar</title> -->
-      <script src="../app/index.jss"></script>
+      <script src="../app/index.js"></script>
       <link rel="stylesheet" href="../styles/style.css">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link rel="preconnect" href="https://fonts.gstatic.com">
