feature for uploading files added

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,10 +1,9 @@
+
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <!-- <title>Responsive Drop-down Menu Bar</title> -->
-      <script src="../app/index.js"></script>
+      <script defer src="../app/index.js"></script>
       <link rel="stylesheet" href="../styles/style.css">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -52,6 +51,10 @@
 
       <img src="../assets/play.svg" alt="play-button" id="play-button" onclick="playButton();">
       <img src="../assets/pause.svg" alt="pause-button" id="pause-button" onclick="pauseButton();">
+
+      <input type="file" id="real-file" hidden="hidden" />
+      <button type="button" id="custom-button">CHOOSE A FILE</button>
+      <span id="custom-text">No file chosen, yet.</span>
 
        <script>
          $('.icon').click(function(){
