burger menu file function

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -30,7 +30,7 @@
                <a href="#">Datei</a>
                <input type="checkbox" id="btn-1">
                <ul>
-                  <li><a href="#">Öffnen</a></li>
+                  <li id="openFile"><a href="#">Öffnen</a></li>
                   <li><a href="#">Zuletzt verwendete öffnen</a></li>
                   <li><a href="#">Speichern</a></li>
                   <li><a href="#">Speichern unter</a></li>
@@ -53,7 +53,7 @@
       <img src="../assets/pause.svg" alt="pause-button" id="pause-button" onclick="pauseButton();">
 
       <input type="file" id="real-file" hidden="hidden" />
-      <button type="button" id="custom-button">CHOOSE A FILE</button>
+      
       <span id="custom-text">No file chosen, yet.</span>
 
        <script>
