--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -218,3 +218,26 @@ p{
     cursor: pointer;
 }
   
+
+*,*:after,*:before{
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+
+/*button{
+	padding: 10px 25px;
+	font-size: 22px;
+	line-height: 40px;
+	min-width: 150px;
+	text-align: center;
+	cursor: pointer;
+	background: linear-gradient(to right bottom,#273c75,#079992);
+	color: #fff;
+	border-radius: 5px;
+	border:0px;
+	height: 60px;
+}*/
+
