--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,6 +13,9 @@
       <script src="https://kit.fontawesome.com/6f46a9dc22.js" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
       <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
@@ -50,9 +53,12 @@
 
       <fieldset>
             <textarea id="final"  class="final"></textarea>
+            <div id="editor"></div>
+              
             <br>
             <textarea id="interim" class="interim"></textarea>
-            <button id="btnSave">save config</button>
+            <button id="btnSave" onclick="save()">save as PDF</button>
+            <button  id="cmd" onclick="save()">as txt</button>
        </fieldset>
 
       <i class="far fa-pause-circle" id="pause-button" onclick="pauseButton();"></i>
@@ -71,6 +77,7 @@
            $('span').toggleClass("cancel");
         });
       </script>
+    
    </body>
 </html>
 
