--- a/src/views/index.html
+++ b/src/views/index.html
@@ -54,32 +54,14 @@
       <div id="editor"></div>
       <br>
       <textarea id="interim" class="interim"></textarea>
-      <button id="btnSave" onclick="save()">save as PDF</button>
+      <button id="btnSavePDF" onclick="save()">save as PDF</button>
       <button id="cmd" onclick="save()">as txt</button>
    </fieldset>
 
    <i class="far fa-pause-circle" id="pause-button" onclick="pauseButton();"></i>
    <i class="far fa-play-circle" id="play-button" onclick="playButton();"></i>
    <i class="far fa-stop-circle" id="stop-button" onclick="stopButton();"></i>
-
-   <input type="file" accept="audio/*" id="real-file" hidden="hidden" />
-   <span id="custom-text">No file chosen, yet.</span>
-
-   <div>
-      <audio controls id="myAudio" autoplay></audio>
-   </div>
-
-      <fieldset>
-            <textarea id="final"  class="final"></textarea>
-            <br>
-            <textarea id="interim" class="interim"></textarea>
-            
-       </fieldset>
-
-      <i class="far fa-pause-circle" id="pause-button" onclick="pauseButton();"></i>
-      <i class="far fa-play-circle" id="play-button" onclick="playButton();"></i>
-      <i class="far fa-stop-circle" id="stop-button" onclick="stopButton();"></i>
-      <i class="fas fa-file-download" id="btnSave" ></i>
+   <i class="fas fa-file-download" id="btnSave" ></i>
       
       <div>
          <audio controls id="myAudio" autoplay></audio>
