bugfix txt button, add save function

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -55,7 +55,7 @@
       <br>
       <textarea id="interim" class="interim"></textarea>
       <button id="btnSavePDF" onclick="save()">save as PDF</button>
-      <button id="cmd" onclick="save()">as txt</button>
+      <button id="cmd">as txt</button>
    </fieldset>
 
    <i class="far fa-pause-circle" id="pause-button" onclick="pauseButton();"></i>
