--- a/src/views/index.html
+++ b/src/views/index.html
@@ -38,7 +38,13 @@ speechie
 <li id="openFile"><a href="#">Öffnen</a></li>
 <li><a href="#">Zuletzt verwendete öffnen</a></li>
  <li><a href="#" onclick="savetxt();">Speichern</a></li>
-<li><a href="#">Speichern unter</a></li>
+<li><a href="#">Speichern unter</a>
+   <ul>
+      <li><a href="#" onclick="savetxt();">als txt-Datei</a></li>
+      <li><a href="#" onclick="save();">als PDF-Datei</a></li>
+      <li><a href="#">Submenu-3</a></li>
+   </ul>
+</li>
 <li><a href="#">Exportieren</a></li>
 <li><a href="#">Exportieren als</a></li>
 <li><a href="#">Eigenschaften</a></li>
