editing text in container

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -55,15 +55,16 @@ speechie
 </ul>
 </nav>
 
-
+<div id="neu"></div>
 <fieldset>
 <div class="audiobar">
 <audio controls id="myAudio" autoplay></audio>
 <input type="file" accept="audio/*" id="real-file" hidden="hidden" />
 <span id="custom-text">No file chosen, yet.</span>
 </div>
+<div id="final" class="final" contenteditable="true">
 
-<textarea id="final" class="final"></textarea>
+</div>
 <div id="editor"></div>
 <br>
 <textarea id="interim" class="interim"></textarea>
