--- a/src/views/index.html
+++ b/src/views/index.html
@@ -63,7 +63,7 @@ speechie
 <span id="custom-text">No file chosen, yet.</span>
 </div>
 
-<textarea id="final" class="final"></textarea>
+<div id="final" class="final"></div>
 <div id="editor"></div>
 <br>
 <textarea id="interim" class="interim"></textarea>
@@ -74,6 +74,9 @@ speechie
 
 <i class="far fa-play-circle" id="play-button" onclick="playButton();"></i>
 <i class="fas fa-file-download" id="btnSave" onclick="savetxt();"></i>
+<i class="fas fa-file-download speakerred" id="testBtn" onclick="switchColor('red');"></i>
+<i class="fas fa-file-download speakergreen" id="testBtn2" onclick="switchColor('green');"></i>
+<i class="fas fa-file-download speakerpurple" id="testBtn3" onclick="switchColor('purple');"></i>
 </div>
 <!--<button id="btnSavePDF" onclick="save()">save as PDF</button>
 <button id="cmd" onclick="save()">as txt</button> -->
