drei Sprecher funktionieren auf Knopfdruck

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -74,9 +74,9 @@ speechie
 
 <i class="far fa-play-circle" id="play-button" onclick="playButton();"></i>
 <i class="fas fa-file-download" id="btnSave" onclick="savetxt();"></i>
-<i class="fas fa-file-download speakerred" id="testBtn" onclick="switchColor('red');"></i>
-<i class="fas fa-file-download speakergreen" id="testBtn2" onclick="switchColor('green');"></i>
-<i class="fas fa-file-download speakerpurple" id="testBtn3" onclick="switchColor('purple');"></i>
+<i class="fas fa-circle speakerred" id="testBtn" onclick="switchColor('red');"></i>
+<i class="fas fa-circle speakergreen" id="testBtn2" onclick="switchColor('green');"></i>
+<i class="fas fa-circle speakerpurple" id="testBtn3" onclick="switchColor('purple');"></i>
 </div>
 <!--<button id="btnSavePDF" onclick="save()">save as PDF</button>
 <button id="cmd" onclick="save()">as txt</button> -->
