--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -248,14 +248,6 @@ transform: translate(-50%, -50%);
     font-size: 40px;
 }
 
-#stop-button {
-    position: relative;
-    left: 52%;
-    top: 50%;
-    cursor: pointer;
-    font-size: 40px;
-}
-
 #btnSave {
     position: relative;
     top: 50%;
@@ -305,8 +297,26 @@ button {
     font-size: 16px;
 }
 
+.colorbutton {
+    font-size: 30px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.buttons {
+    justify-content: center;
+}
+
+.coloredButtons {
+    width: 30%;
+    padding: 10px;
+    margin-left: 10%;
+    background-color: lightgrey;
+    border-radius: 50px;
+}
+
 i:hover {
-    color: #326ff0;
+    text-shadow: 0 0 10px #326ff0 ;
 }
 
 .green {
@@ -325,7 +335,6 @@ i:hover {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
 }
-
 
 /*button{
 padding: 10px 25px;
