--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -222,6 +222,17 @@ header {
     padding: 10px 0;
 }
 
+#pulse:hover {
+    animation: pulse 1s infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.1); }
+    100% {transform: scale(1);}
+    }
+
 p {
     font-size: 15px;
     font-weight: 500;
@@ -371,4 +382,68 @@ audio {
 
 .speakerpurple {
     color: purple;
+}
+
+/*Roboter*/
+
+#roboter {
+    position: absolute;
+    width: 400px;
+    height: auto;
+    display: flex;
+}
+#text-area {
+    height: 42%;
+    width: 65%;
+    position: absolute;
+    top: 2px;
+    left: 33%;
+}
+#speechie-robot {
+    width: 100%;
+    height: 100%;
+}
+#info-text {
+    overflow: scroll;
+    height: 100%;
+    overflow-wrap: break-word;
+}
+.hidden {
+    visibility: hidden;
+}
+
+.roboter-visible {
+    visibility: visible;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+}
+
+#clicks {
+    position: absolute;
+    border-style: none;
+    background-color: none;
+    bottom: 0;
+    right: 3%;
+}
+
+#clicks:hover{
+    cursor: pointer;
+    color: red;
+}
+
+.roboter-step1 {
+    top: 0;
+}
+.roboter-step2 {
+    top: 25%;
+}
+.roboter-step3 {
+    top: 50%;
+}
+.roboter-step4 {
+    top: 75%;
+}
+.roboter-step5 {
+    top: 100%;
 }
