--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -375,9 +375,38 @@ i:hover {
   transition: transform 0.2s linear;
 }
 
-.speakerpurple {
-    color: purple;
-}
+
+.checkbox:checked + .label .ball {
+    transform: translateX(18px);
+  }
+  
+  .fa-moon {
+    color: #f1c40f;
+    font-size: 10px;
+  }
+  
+  .fa-sun {
+    color: #f39c12;
+    font-size: 10px;
+  }
+  
+  body.dark {
+    background: #2a2a2a;
+    transition: 0.2s;
+  }
+  
+  .darkmode {
+    padding-left: -230px;
+  }
+  
+  .darkbuttons {
+    color: white;
+  }
+  
+  .darkAudioText {
+    color: white;
+  }
+  
 
 /*Roboter*/
 
@@ -412,6 +441,10 @@ i:hover {
     position: absolute;
     width: 50px;
     height: 50px;
+    transform: translate(-50%);
+    top: 350px;
+    left: 1000px;
+ 
 }
 
 #clicks {
@@ -428,48 +461,32 @@ i:hover {
 }
 
 .roboter-step1 {
-    top: 0;
+    left: 650px;
+    top: 850px;
+  
 }
 .roboter-step2 {
-    top: 25%;
+    top: 700px;
+    left: 330px;
 }
 .roboter-step3 {
-    top: 50%;
+    top: 450px;
+    left: 330px;
 }
 .roboter-step4 {
-    top: 75%;
+    top: 850px;
+    left: 18%;
 }
-.roboter-step5 {
-    top: 100%;
+
+.roboter-step6 {
+    top: 20px;
+    left: 570px;
 }
+
+.roboter-step7 {
+    top: 850px;
+    left: 870px;
+}
+
+
   
-.checkbox:checked + .label .ball {
-  transform: translateX(18px);
-}
-
-.fa-moon {
-  color: #f1c40f;
-  font-size: 10px;
-}
-
-.fa-sun {
-  color: #f39c12;
-  font-size: 10px;
-}
-
-body.dark {
-  background: #2a2a2a;
-  transition: 0.2s;
-}
-
-.darkmode {
-  padding-left: -230px;
-}
-
-.darkbuttons {
-  color: white;
-}
-
-.darkAudioText {
-  color: white;
-}
