--- a/src/views/transcription.html
+++ b/src/views/transcription.html
@@ -111,6 +111,7 @@
           onclick="onClick()"
           class="fas fa-arrow-right"
         ></button>
+        <button class="far fa-times-circle" onclick="step9()"></button>
       </div>
     </div>
   </body>
