mdn logo added, header changes

--- a/src/views/transcription.html
+++ b/src/views/transcription.html
@@ -25,9 +25,12 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="../assets/speechie2.png" />
+        <a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Speech_API/Using_the_Web_Speech_API"><img class="mdn-logo" src="../assets/MDN_Web_Docs.svg.png"/></a>
+        <div class="speechie">
+          <a href="/index.html"><img class="speechie-logo" src="../assets/speechie2.png"/></a>
+          speechie
+        </div>
       </div>
-      <div class="speechie">speechie</div>
       <label for="btn" class="icon">
         <span class="fa fa-bars"></span>
       </label>
