renamed colored Buttons

--- a/src/views/transcription.html
+++ b/src/views/transcription.html
@@ -81,17 +81,17 @@
         <div class="coloredButtons">
           <i
             class="fas fa-circle speakerred colorbutton"
-            id="testBtn1"
+            id="redBtn"
             onclick="switchColor('red');"
           ></i>
           <i
             class="fas fa-circle speakergreen colorbutton"
-            id="testBtn2"
+            id="greenBtn"
             onclick="switchColor('green');"
           ></i>
           <i
             class="fas fa-circle speakerpurple colorbutton"
-            id="testBtn3"
+            id="purpleBtn"
             onclick="switchColor('purple');"
           ></i>
         </div>
