--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,6 +19,7 @@ nav {
   width: 100%;
   position: fixed;
   z-index: 100;
+  min-width: 950px;
 }
 
 nav:after {
@@ -28,10 +29,11 @@ nav:after {
 }
 
 nav .logo {
-  float: left;
+  /*float: left;*/
   color: white;
   padding-left: 60px;
   padding-top: 15px;
+  display: flex;
 }
 
 nav .speechie {
@@ -49,7 +51,6 @@ nav ul {
 }
 
 nav ul li {
-  float: left;
   display: inline-block;
   background: #0171bd;
   margin: 0 5px;
@@ -110,123 +111,6 @@ input {
 .fa-plus {
   font-size: 15px;
   margin-left: 40px;
-}
-
-/*__________________Navigationsleiste klein___________________*/
-
-@media all and (max-width: 968px) {
-  nav ul {
-    margin-right: 0px;
-    float: left;
-  }
-
-  nav .logo {
-    padding-left: 30px;
-    width: 100%;
-  }
-
-  .show + a,
-  ul {
-    display: none;
-  }
-
-  nav ul li,
-  nav ul ul li {
-    display: block;
-    width: 100%;
-  }
-
-  nav ul li a:hover {
-    box-shadow: none;
-  }
-
-  .show {
-    display: block;
-    color: white;
-    font-size: 18px;
-    padding: 0 20px;
-    line-height: 70px;
-    cursor: pointer;
-  }
-
-  .show:hover {
-    color: cyan;
-  }
-
-  .icon {
-    display: block;
-    color: white;
-    position: absolute;
-    top: 0;
-    right: 40px;
-    line-height: 70px;
-    cursor: pointer;
-    font-size: 25px;
-  }
-
-  nav ul ul {
-    top: 70px;
-    border-top: 0px;
-    float: none;
-    position: static;
-    display: none;
-    opacity: 1;
-    visibility: visible;
-  }
-
-  nav ul ul a {
-    padding-left: 40px;
-  }
-
-  nav ul ul ul a {
-    padding-left: 80px;
-  }
-
-  nav ul ul ul li {
-    position: static;
-  }
-
-  [id^='btn']:checked + ul {
-    display: block;
-  }
-
-  nav ul ul li {
-    border-bottom: 0px;
-  }
-
-  span.cancel:before {
-    content: '\f00d';
-  }
-}
-
-#pulse:hover {
-  animation: pulse 1s infinite;
-  animation-timing-function: linear;
-}
-
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-p {
-  font-size: 15px;
-  font-weight: 500;
-}
-*,
-*:after,
-*:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 /*__________________Audio___________________*/
@@ -496,8 +380,7 @@ body.dark {
 }
 
 .mdn-logo {
-  width: 10%;
-  height: 10%;
+  width: 150px;
   padding-top: 5px;
   float: left;
 }
@@ -508,6 +391,7 @@ body.dark {
 }
 
 .speechie {
-  margin-left: 50%;
   display: flex;
+  margin: auto;
+  padding-left: 170px;
 }
